# agentcity

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CITATIONS.md  COMPOSITION-RUNBOOK.md  CONTRIBUTING.md  Dockerfile  LICENSE  PATTERNS.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  dependabot.yml  render_release_notes.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml  docs.yml  release.yml
_adapters/lib/: __init__.py  _base.py  autogen.py  crewai.py  langchain.py  langgraph.py  llamaindex.py  openai.py  openwebui.py  pydantic_ai.py
_adapters/tests/: conftest.py  test_adapters.py
_analytics/lib/: __init__.py  __main__.py  _aggregate.py  _sink.py  cli.py
_analytics/tests/: conftest.py  test_analytics.py
_api/lib/: __init__.py  __main__.py  _app.py  cli.py
_api/tests/: conftest.py  test_api.py  test_api_security.py
_baselines/: README.md
_baselines/canonical/: span_of_control_hub_and_spoke.json  span_of_control_small_flat.json  span_of_control_two_layer.json
_baselines/scripts/: generate_canonical.py
_benchmarks/lib/: __init__.py  __main__.py  _comparative.py  _harness.py  cli.py
_benchmarks/tests/: conftest.py  test_benchmarks.py
_browser/lib/: __init__.py  __main__.py  _client.py  _scrape.py  cli.py
_browser/tests/: conftest.py  test_browser.py
_cache/lib/: __init__.py  _cache.py
_cache/tests/: conftest.py  test_cache.py
_doctor/lib/: __init__.py  __main__.py  _doctor.py  cli.py
_doctor/tests/: conftest.py  test_doctor.py
_gbrain/lib/: __init__.py  __main__.py  _search.py  cli.py
_gbrain/tests/: conftest.py  test_gbrain.py
_hello/lib/: __init__.py  __main__.py  _hello.py  cli.py
_hello/tests/: conftest.py  test_hello.py
_learnings/lib/: __init__.py  __main__.py  _store.py  cli.py
_learnings/tests/: conftest.py  test_learnings.py
_mcp/lib/: __init__.py  __main__.py  _client.py  _prompts.py  _registry.py  _resources.py  _server.py  cli.py
_mcp/tests/: conftest.py  test_registry.py  test_server.py
_memory/lib/: __init__.py  __main__.py  _config.py  _fs_atomic.py  _home.py  _platforms.py  cli.py
_memory/tests/: conftest.py  test_memory.py
_observability/lib/: __init__.py  _metrics.py  _request_id.py  _sentry.py
_observability/tests/: conftest.py  test_observability.py
_packaging/agentcity/: __init__.py
_packaging/vstack/: __init__.py
_security/lib/: __init__.py  _auth.py  _limits.py  _rate_limit.py  _validation.py
_security/tests/: conftest.py  test_security.py
_skills/: README.md
_skills/vstack/: SKILL.md
_skills/vstack-audit-crew/: SKILL.md
_skills/vstack-baseline/: SKILL.md
_skills/vstack-bottleneck/: SKILL.md
_skills/vstack-culture-check/: SKILL.md
_skills/vstack-pick-pattern/: SKILL.md
_skills/vstack-post-incident/: SKILL.md
_upgrade/lib/: __init__.py  __main__.py  _upgrade.py  cli.py
_upgrade/tests/: conftest.py  test_upgrade.py
benchmarks/_perf/: README.md  run_perf_suite.py
completions/: README.md  _vstack  vstack.bash  vstack.fish
docs/: changelog.md  index.md  quickstart.md
docs/assets/: launch-video.html  screencast.tape
docs/concepts/: baselines.md  composition.md  modes.md  pattern-shape.md
docs/operations/: deploy.md  security.md
docs/patterns/: index.md  module-1.md  module-2.md  module-3.md
docs/recipes/: audit-crew.md  bottleneck.md  confidently-wrong.md  culture-check.md  index.md
docs/reference/: cli.md  config-keys.md  mcp-uris.md  rest-endpoints.md
docs/surfaces/: browser.md  docker.md  framework-adapters.md  mcp.md  python-and-clis.md  rest-api.md  skills.md
docs/workflows/: analytics.md  benchmarks.md  learnings.md  memory.md  upgrade.md
essays/: 01-lewin.md  02-goleman-ei.md  03-johari.md  04-danva.md  05-cognitive-reappraisal.md  06-yerkes-dodson.md  07-hexaco.md  08-grant.md  09-motivation-traps.md  10-sdt.md  11-mcgregor.md  12-vroom.md  13-grpi.md  14-process-gain-loss.md  15-social-loafing.md  16-superflocks.md  17-lencioni.md  18-trust-triangle.md  19-mcallister.md  20-edmondson-psych-safety.md  21-glaser.md  22-stone-heen.md  23-plus-delta.md  24-smart-goal.md  25-group-decision.md  26-debate-pathology.md  27-bias-stack.md  28-devils-advocate.md  29-thomas-kilmann.md  30-aar.md  31-schein.md  32-robbins-judge.md  33-org-structure.md  34-span-of-control.md  README.md  _TEMPLATE.md
examples/: README.md  autogen_demo.py  crewai_demo.py  langchain_demo.py  langgraph_demo.py  llamaindex_demo.py  openai_assistants_demo.py  pydantic_ai_demo.py
examples/cookbook/: 01_aar_then_lewin.py  02_parallel_pattern_fan_out.py  03_observable_run.py  README.md
module-1-individual/01-lewin-formula/: README.md  essay.md
module-1-individual/02-goleman-ei-audit/: README.md  essay.md
module-1-individual/03-johari-window/: README.md  essay.md
module-1-individual/04-danva-emotion-reader/: README.md  essay.md
module-1-individual/05-cognitive-reappraisal/: README.md  essay.md
module-1-individual/06-yerkes-dodson-workload/: README.md  essay.md
module-1-individual/07-hexaco-personality/: README.md  essay.md
module-1-individual/08-grant-strengths-as-weaknesses/: README.md  essay.md
module-1-individual/09-motivation-traps/: README.md  essay.md
module-1-individual/10-sdt-intrinsic-reward/: README.md  essay.md
module-1-individual/11-mcgregor-orchestrator-mode/: README.md  essay.md
module-1-individual/12-vroom-expectancy/: README.md  essay.md
module-2-team/13-grpi-working-agreement/: README.md  essay.md
module-2-team/14-process-gain-loss-detector/: README.md  essay.md
module-2-team/15-social-loafing-detector/: README.md  essay.md
module-2-team/16-heffernan-superflocks-detector/: README.md  essay.md
module-2-team/17-lencioni-diagnostic/: README.md  essay.md
module-2-team/18-trust-triangle-audit/: README.md  essay.md
module-2-team/19-mcallister-trust-dimensions/: README.md  essay.md
module-2-team/20-edmondson-psych-safety/: README.md  essay.md
(+567 files in other folders)
