[project]
name = "agentcity"
version = "0.0.14"
description = "Organizational behavior, practiced on AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Ilhan Valani", email = "valani@bu.edu" }]
keywords = [
    "ai",
    "agents",
    "after-action-review",
    "organizational-behavior",
    "multi-agent",
    "lencioni",
    "edmondson",
    "psychological-safety",
    "feedback",
    "devils-advocate",
    "lewin",
    "attribution",
    "trust",
    "social-loafing",
    "groupthink",
    "polarization",
    "process-loss",
    "smart-goals",
    "orchestration",
    "decision-making",
    "fist-to-five",
    "schein",
    "culture",
    "strengths",
    "plus-delta",
    "robbins-judge",
    "superflocks",
    "yerkes-dodson",
    "workload",
    "org-structure",
    "galbraith",
    "mintzberg",
    "motivation",
    "saxberg",
    "conversational-intelligence",
    "glaser",
    "goleman",
    "emotional-intelligence",
    "self-determination-theory",
    "deci-ryan",
    "span-of-control",
    "centralization",
    "danva",
    "nowicki-duke",
    "emotion-recognition",
    "gross",
    "cognitive-reappraisal",
    "emotion-regulation",
    "hexaco",
    "lee-ashton",
    "personality",
    "vroom",
    "expectancy",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0"]
all = ["agentcity[anthropic,openai]"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.urls]
Homepage = "https://github.com/valani9/AgentCity"
Repository = "https://github.com/valani9/AgentCity"
Issues = "https://github.com/valani9/AgentCity/issues"

[project.scripts]
agentcity = "agentcity.aar.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The repo is organized by module + pattern number (module-2-team/30-...)
# but the published Python package presents the conventional `agentcity.*`
# import surface. `force-include` rewrites the paths at build time so the
# wheel ships `agentcity/aar/...` even though the source lives elsewhere.
# New patterns add another entry here on the same pattern.
[tool.hatch.build.targets.wheel]
only-include = []

[tool.hatch.build.targets.wheel.force-include]
"module-2-team/30-aar-generator/lib" = "agentcity/aar"
"module-2-team/17-lencioni-diagnostic/lib" = "agentcity/lencioni"
"module-2-team/18-trust-triangle-audit/lib" = "agentcity/trust_triangle"
"module-1-individual/03-johari-window/lib" = "agentcity/johari"
"module-2-team/13-grpi-working-agreement/lib" = "agentcity/grpi"
"module-2-team/27-bias-stack-detector/lib" = "agentcity/bias_stack"
"module-2-team/20-edmondson-psych-safety/lib" = "agentcity/psych_safety"
"module-2-team/29-thomas-kilmann-selector/lib" = "agentcity/thomas_kilmann"
"module-2-team/22-stone-heen-feedback-triggers/lib" = "agentcity/feedback_triggers"
"module-2-team/28-devils-advocate-separator/lib" = "agentcity/devils_advocate"
"module-1-individual/01-lewin-formula/lib" = "agentcity/lewin"
"module-2-team/19-mcallister-trust-dimensions/lib" = "agentcity/mcallister_trust"
"module-2-team/15-social-loafing-detector/lib" = "agentcity/social_loafing"
"module-2-team/26-groupthink-polarization-contagion/lib" = "agentcity/debate_pathology"
"module-2-team/14-process-gain-loss-detector/lib" = "agentcity/process_gain_loss"
"module-2-team/24-smart-goal-generator/lib" = "agentcity/smart_goal"
"module-1-individual/11-mcgregor-orchestrator-mode/lib" = "agentcity/mcgregor"
"module-2-team/25-group-decision-models/lib" = "agentcity/group_decision"
"module-3-organization/31-schein-iceberg-culture/lib" = "agentcity/schein_culture"
"module-1-individual/08-grant-strengths-as-weaknesses/lib" = "agentcity/grant_strengths"
"module-2-team/23-plus-delta-feedback-format/lib" = "agentcity/plus_delta"
"module-3-organization/32-robbins-judge-7-culture/lib" = "agentcity/robbins_culture"
"module-2-team/16-heffernan-superflocks-detector/lib" = "agentcity/superflocks"
"module-1-individual/06-yerkes-dodson-workload/lib" = "agentcity/yerkes_dodson"
"module-3-organization/33-org-structure-matrix/lib" = "agentcity/org_structure"
"module-1-individual/09-motivation-traps/lib" = "agentcity/motivation_traps"
"module-2-team/21-glaser-conversation-steering/lib" = "agentcity/glaser_conversation"
"module-1-individual/02-goleman-ei-audit/lib" = "agentcity/goleman_ei"
"module-1-individual/10-sdt-intrinsic-reward/lib" = "agentcity/sdt_reward"
"module-3-organization/34-span-of-control/lib" = "agentcity/span_of_control"
"module-1-individual/04-danva-emotion-reader/lib" = "agentcity/danva_emotion"
"module-1-individual/05-cognitive-reappraisal/lib" = "agentcity/cognitive_reappraisal"
"module-1-individual/07-hexaco-personality/lib" = "agentcity/hexaco"
"module-1-individual/12-vroom-expectancy/lib" = "agentcity/vroom_expectancy"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
