[project]
name = "valanistack"
version = "0.3.0"
description = "Organizational behavior, practiced on AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Ilhan Valani", email = "valani@bu.edu" }]
keywords = [
    "ai",
    "agents",
    "after-action-review",
    "organizational-behavior",
    "multi-agent",
    "lencioni",
    "edmondson",
    "psychological-safety",
    "feedback",
    "devils-advocate",
    "lewin",
    "attribution",
    "trust",
    "social-loafing",
    "groupthink",
    "polarization",
    "process-loss",
    "smart-goals",
    "orchestration",
    "decision-making",
    "fist-to-five",
    "schein",
    "culture",
    "strengths",
    "plus-delta",
    "robbins-judge",
    "superflocks",
    "yerkes-dodson",
    "workload",
    "org-structure",
    "galbraith",
    "mintzberg",
    "motivation",
    "saxberg",
    "conversational-intelligence",
    "glaser",
    "goleman",
    "emotional-intelligence",
    "self-determination-theory",
    "deci-ryan",
    "span-of-control",
    "centralization",
    "danva",
    "nowicki-duke",
    "emotion-recognition",
    "gross",
    "cognitive-reappraisal",
    "emotion-regulation",
    "hexaco",
    "lee-ashton",
    "personality",
    "vroom",
    "expectancy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0"]
ollama = ["httpx>=0.27.0"]
mcp = ["mcp>=1.20.0"]
api = ["fastapi>=0.115.0", "uvicorn[standard]>=0.30.0"]
all = ["valanistack[anthropic,openai,ollama,mcp,api]"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "bandit[toml]>=1.7.10",
    "pip-audit>=2.7.0",
    "pre-commit>=3.5.0",
    "build>=1.2.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "mcp>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/valani9/vstack"
Repository = "https://github.com/valani9/vstack"
Issues = "https://github.com/valani9/vstack/issues"
Changelog = "https://github.com/valani9/vstack/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/valani9/vstack/issues"
"Security" = "https://github.com/valani9/vstack/security/policy"

[project.scripts]
vstack = "vstack.aar.cli:main"
vstack-mcp = "vstack.mcp.cli:main"
vstack-api = "vstack.api.cli:main"
vstack-config = "vstack.memory.cli:main"
vstack-upgrade = "vstack.upgrade.cli:main"
vstack-lewin = "vstack.lewin.cli:main"
vstack-goleman = "vstack.goleman_ei.cli:main"
vstack-johari = "vstack.johari.cli:main"
vstack-danva = "vstack.danva_emotion.cli:main"
vstack-reappraisal = "vstack.cognitive_reappraisal.cli:main"
vstack-yerkes = "vstack.yerkes_dodson.cli:main"
vstack-hexaco = "vstack.hexaco.cli:main"
vstack-grant = "vstack.grant_strengths.cli:main"
vstack-motivation = "vstack.motivation_traps.cli:main"
vstack-sdt = "vstack.sdt_reward.cli:main"
vstack-mcgregor = "vstack.mcgregor.cli:main"
vstack-vroom = "vstack.vroom_expectancy.cli:main"
vstack-grpi = "vstack.grpi.cli:main"
vstack-process = "vstack.process_gain_loss.cli:main"
vstack-loafing = "vstack.social_loafing.cli:main"
vstack-superflocks = "vstack.superflocks.cli:main"
vstack-lencioni = "vstack.lencioni.cli:main"
vstack-trust-triangle = "vstack.trust_triangle.cli:main"
vstack-mcallister = "vstack.mcallister_trust.cli:main"
vstack-psych-safety = "vstack.psych_safety.cli:main"
vstack-glaser = "vstack.glaser_conversation.cli:main"
vstack-feedback-triggers = "vstack.feedback_triggers.cli:main"
vstack-plus-delta = "vstack.plus_delta.cli:main"
vstack-smart-goal = "vstack.smart_goal.cli:main"
vstack-group-decision = "vstack.group_decision.cli:main"
vstack-debate-pathology = "vstack.debate_pathology.cli:main"
vstack-bias-stack = "vstack.bias_stack.cli:main"
vstack-devils-advocate = "vstack.devils_advocate.cli:main"
vstack-thomas-kilmann = "vstack.thomas_kilmann.cli:main"
vstack-schein-culture = "vstack.schein_culture.cli:main"
vstack-robbins-culture = "vstack.robbins_culture.cli:main"
vstack-org-structure = "vstack.org_structure.cli:main"
vstack-span-of-control = "vstack.span_of_control.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The repo is organized by module + pattern number (module-2-team/30-...)
# but the published Python package presents the conventional `vstack.*`
# import surface. `force-include` rewrites the paths at build time so the
# wheel ships `vstack/aar/...` even though the source lives elsewhere.
# New patterns add another entry here on the same pattern.
[tool.hatch.build.targets.wheel]
only-include = []

[tool.hatch.build.targets.wheel.force-include]
"_packaging/vstack/__init__.py" = "vstack/__init__.py"
"_packaging/vstack/py.typed" = "vstack/py.typed"
"_mcp/lib" = "vstack/mcp"
"_memory/lib" = "vstack/memory"
"_upgrade/lib" = "vstack/upgrade"
"_api/lib" = "vstack/api"
"module-2-team/30-aar-generator/lib" = "vstack/aar"
"module-2-team/17-lencioni-diagnostic/lib" = "vstack/lencioni"
"module-2-team/18-trust-triangle-audit/lib" = "vstack/trust_triangle"
"module-1-individual/03-johari-window/lib" = "vstack/johari"
"module-2-team/13-grpi-working-agreement/lib" = "vstack/grpi"
"module-2-team/27-bias-stack-detector/lib" = "vstack/bias_stack"
"module-2-team/20-edmondson-psych-safety/lib" = "vstack/psych_safety"
"module-2-team/29-thomas-kilmann-selector/lib" = "vstack/thomas_kilmann"
"module-2-team/22-stone-heen-feedback-triggers/lib" = "vstack/feedback_triggers"
"module-2-team/28-devils-advocate-separator/lib" = "vstack/devils_advocate"
"module-1-individual/01-lewin-formula/lib" = "vstack/lewin"
"module-2-team/19-mcallister-trust-dimensions/lib" = "vstack/mcallister_trust"
"module-2-team/15-social-loafing-detector/lib" = "vstack/social_loafing"
"module-2-team/26-groupthink-polarization-contagion/lib" = "vstack/debate_pathology"
"module-2-team/14-process-gain-loss-detector/lib" = "vstack/process_gain_loss"
"module-2-team/24-smart-goal-generator/lib" = "vstack/smart_goal"
"module-1-individual/11-mcgregor-orchestrator-mode/lib" = "vstack/mcgregor"
"module-2-team/25-group-decision-models/lib" = "vstack/group_decision"
"module-3-organization/31-schein-iceberg-culture/lib" = "vstack/schein_culture"
"module-1-individual/08-grant-strengths-as-weaknesses/lib" = "vstack/grant_strengths"
"module-2-team/23-plus-delta-feedback-format/lib" = "vstack/plus_delta"
"module-3-organization/32-robbins-judge-7-culture/lib" = "vstack/robbins_culture"
"module-2-team/16-heffernan-superflocks-detector/lib" = "vstack/superflocks"
"module-1-individual/06-yerkes-dodson-workload/lib" = "vstack/yerkes_dodson"
"module-3-organization/33-org-structure-matrix/lib" = "vstack/org_structure"
"module-1-individual/09-motivation-traps/lib" = "vstack/motivation_traps"
"module-2-team/21-glaser-conversation-steering/lib" = "vstack/glaser_conversation"
"module-1-individual/02-goleman-ei-audit/lib" = "vstack/goleman_ei"
"module-1-individual/10-sdt-intrinsic-reward/lib" = "vstack/sdt_reward"
"module-3-organization/34-span-of-control/lib" = "vstack/span_of_control"
"module-1-individual/04-danva-emotion-reader/lib" = "vstack/danva_emotion"
"module-1-individual/05-cognitive-reappraisal/lib" = "vstack/cognitive_reappraisal"
"module-1-individual/07-hexaco-personality/lib" = "vstack/hexaco"
"module-1-individual/12-vroom-expectancy/lib" = "vstack/vroom_expectancy"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "module-1-individual",
    "module-2-team",
    "module-3-organization",
    "_mcp",
    "_memory",
    "_upgrade",
    "_api",
]
addopts = "-ra --tb=short --strict-markers"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
]

[tool.coverage.run]
source = ["vstack"]
omit = [
    "*/tests/*",
    "*/demo/*",
    "*/benchmark/*",
    "*/_perf/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.bandit]
# Library code only; tests + demos exercise canned fixtures.
exclude_dirs = [".venv", ".git", "dist", "tests", "demo", "examples", "benchmarks"]
skips = ["B101"]  # asserts are OK in library code; they're not security gates
